--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -17,7 +17,7 @@
 
 body {
   background-image: url("https://source.unsplash.com/random");
-  background-size: cover;
+  background-size: block;
 }
 a {
   text-decoration: none !important;
